# dep-lens

./: .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  install.sh  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/dep-lens-core/: Cargo.toml
crates/dep-lens-core/src/: lib.rs  main.rs  model.rs  util.rs
crates/dep-lens-core/src/license/: classifier.rs  mod.rs  risk.rs
crates/dep-lens-core/src/report/: csv.rs  html.rs  json.rs  markdown.rs  mod.rs
crates/dep-lens-core/src/scanner/: cargo.rs  cpp.rs  dart.rs  go.rs  java.rs  mod.rs  npm.rs  php.rs  python.rs  ruby.rs
docs/: deplens.html
docs/assets/: index.html
examples/: README.md  verify.sh
examples/cargo-test-project/: Cargo.toml
examples/cargo-test-project/src/: main.rs
examples/cpp-test-project/: vcpkg.json
examples/dart-test-project/: pubspec.yaml
examples/dart-test-project/.pub-cache/hosted/pub.dev/http-1.2.0/: LICENSE
examples/go-test-project/: go.mod
examples/go-test-project/.cache/gopath/pkg/mod/github.com/pkg/errors@v0.9.1/: LICENSE
examples/java-test-project/: build.gradle
examples/npm-test-project/: package.json
examples/php-test-project/: composer.json
examples/python-test-project/: pyproject.toml
scripts/: verify-fixture.py
test-project/: Cargo.toml  composer.json  go.mod  package.json  pyproject.toml
test-project/.cache/gopath/pkg/mod/golang.org/x/text@v0.14.0/: LICENSE
test-project/src/: main.rs
