[package]
name = "dep-lens-core"
description = "License scanner core for npm and Cargo dependency trees"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dep-lens-core"
path = "src/main.rs"

[lib]
name = "dep_lens_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
